downgrade collection usage to java level 8